--- a/UniSellApplication/app/src/main/res/layout/activity_view_listings.xml
+++ b/UniSellApplication/app/src/main/res/layout/activity_view_listings.xml
@@ -1,157 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.create_listing.CreateListingFragment">
+    android:background="@color/white"
+    tools:context=".activities.ViewListingsActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/view_toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/red_186"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="Title"
-        app:titleTextColor="@color/white" />
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/add_img_button"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:src="@drawable/baseline_add_photo_alternate_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_toolbar"
-        app:layout_constraintVertical_bias="0.01"
-        />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/view_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/red_186"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="View Listing"
+            app:titleTextColor="@color/white" />
 
-    <TextView
-        android:id="@+id/title_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="1dp"
-        android:text="Title"
-        android:paddingLeft="5dp"
-        android:textColor="@color/blue_2767"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_img_button" />
+        <ImageView
+            android:id="@+id/add_img_button"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:src="@drawable/baseline_add_photo_alternate_24"
+            />
 
-    <TextView
-        android:id="@+id/editTextTitle"
-        android:layout_width="400dp"
-        android:layout_height="40dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:text="Title"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_txt" />
+        <TextView
+            android:id="@+id/title_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Title"
+            android:paddingLeft="5dp"
+            android:textColor="@color/blue_2767"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/description_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="1dp"
-        android:text="Description"
-        android:textColor="@color/blue_2767"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingLeft="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDescripiton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />
+        <TextView
+            android:id="@+id/category_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:text="Category"
+            android:textColor="@color/blue_2767"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:paddingLeft="5dp" />
 
-    <TextView
-        android:id="@+id/editTextDescripiton"
-        android:layout_width="400dp"
-        android:layout_height="215dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:gravity="top"
-        android:maxWidth="0dp"
-        android:maxLength="300"
-        android:inputType="textMultiLine"
-        android:text="Description"
-        android:paddingLeft="10dp"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_txt" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/price_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="1dp"
+                android:text="Price"
+                android:textColor="@color/blue_2767"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:paddingLeft="5dp"/>
 
-    <TextView
-        android:id="@+id/price_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28.5dp"
-        android:layout_marginBottom="1dp"
-        android:text="Price $"
-        android:textColor="@color/blue_2767"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingLeft="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDescripiton" />
+            <TextView
+                android:id="@+id/editTextPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/edittext_background"
+                android:ems="10"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="0.00"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/editTextPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:background="@drawable/edittext_background"
-        android:layout_marginTop="21.5dp"
-        android:ems="10"
-        android:text="0.00"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_marginStart="5dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        app:layout_constraintStart_toEndOf="@+id/price_txt"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDescripiton" />
+        <TextView
+            android:id="@+id/description_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="1dp"
+            android:text="Description"
+            android:textColor="@color/blue_2767"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:paddingLeft="5dp"/>
 
-    <TextView
-        android:id="@+id/category_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28.5dp"
-        android:layout_marginBottom="1dp"
-        android:text="Category"
-        android:textColor="@color/blue_2767"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingLeft="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/price_txt" />
+        <TextView
+            android:id="@+id/editTextDescripiton"
+            android:layout_width="match_parent"
+            android:layout_height="215dp"
+            android:background="@drawable/edittext_background"
+            android:ems="10"
+            android:gravity="top"
+            android:maxWidth="0dp"
+            android:maxLength="300"
+            android:inputType="textMultiLine"
+            android:text="Description"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:paddingLeft="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"/>
 
-    <TextView
-        android:id="@+id/editTextCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:background="@drawable/edittext_background"
-        android:layout_marginTop="21.5dp"
-        android:ems="10"
-        android:text="Category"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_marginStart="5dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        app:layout_constraintStart_toEndOf="@+id/category_txt"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />
+        <TextView
+            android:id="@+id/contactInfo_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="1dp"
+            android:text="Contact Info:"
+            android:textColor="@color/blue_2767"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:paddingLeft="5dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/editTextContact"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/edittext_background"
+            android:ems="10"
+            android:gravity="top"
+            android:maxWidth="0dp"
+            android:maxLength="300"
+            android:inputType="textMultiLine"
+            android:text="Contact Info"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:paddingLeft="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"/>
+    </LinearLayout>
+</ScrollView>
