--- a/UniSellApplication/app/src/main/res/layout/fragment_profile.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_profile.xml
@@ -6,9 +6,89 @@
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
-    <TextView
+    <ImageView
+        android:id="@+id/registration_img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile" />
+        android:layout_height="200dp"
+        android:src="@mipmap/unisell_banner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/name_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name Here"
+        android:textColor="@color/blue_2767"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/registration_img" />
+
+    <TextView
+        android:id="@+id/email_title"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:text="Email:"
+        android:textSize="27sp"
+        android:textStyle="bold"
+        android:textColor="@color/blue_2767"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name_txt" />
+    
+    <TextView
+        android:id="@+id/email_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="leila_eshaghi@mail.fresnostate.edu"
+        android:textSize="23sp"
+        android:textColor="@color/blue_2767"
+        android:layout_marginTop="1dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_title" />
+
+    <TextView
+        android:id="@+id/phone_title"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:text="Phone:"
+        android:textSize="27sp"
+        android:textStyle="bold"
+        android:textColor="@color/blue_2767"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_txt" />
+    
+    <TextView
+        android:id="@+id/phone_txt"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:text="(559)123-4567"
+        android:textSize="23sp"
+        android:textColor="@color/blue_2767"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phone_title" />
+
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintVertical_bias="0"
+        android:layout_marginTop="60dp"
+        android:padding="14dp"
+        android:text="LogOut"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/phone_txt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
